--- a/default.project.json
+++ b/default.project.json
@@ -1,22 +1,20 @@
 {
-  "name": "SacramentGuiRepo",
+  "name": "sacrament",
   "tree": {
     "$className": "DataModel",
     "ReplicatedStorage": {
-      "SacramentGui": {
-        "$className": "Folder",
+      "$className": "ReplicatedStorage",
+      "Sacrament": {
         "$path": "src"
-      },
-      "SacramentGui_Bootstrapper": {
-        "$className": "ModuleScript",
-        "$path": "bootstrapper.lua"
       }
     },
     "StarterPlayer": {
+      "$className": "StarterPlayer",
       "StarterPlayerScripts": {
-        "SacramentGui_Loader": {
+        "$className": "StarterPlayerScripts",
+        "SacramentBootstrapper": {
           "$className": "LocalScript",
-          "$path": "loader.lua"
+          "$path": "bootstraper.lua"
         }
       }
     }
